--- a/app/project/registration/static/registration/styles/styles.css
+++ b/app/project/registration/static/registration/styles/styles.css
@@ -150,6 +150,12 @@ main {
     align-items: center;
   }
 }
+main#home .filter-options button {
+  background-color: #000000;
+}
+main#home .filter-options button:hover {
+  background-color: #578DDD;
+}
 main#home .filter-options .filter-action-element {
   display: flex;
   margin: 16px 0;
@@ -170,15 +176,19 @@ main#home .filter-options .filter-action-element button {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
 }
+main#home button {
+  background-color: #578DDD;
+}
+main#home button:hover {
+  background-color: #A992FA;
+}
 main#home section#number-of-sessions-chart {
   display: flex;
   flex-direction: column;
+  margin-bottom: 100px;
 }
 main#home section#number-of-sessions-chart div {
   align-self: center;
   width: 100%;
   max-width: 700px;
-}
-main#home section#monthly-sessions-chart form {
-  margin-top: 100px;
 }/*# sourceMappingURL=styles.css.map */
