--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -60,3 +60,21 @@ main#home {
   //   margin-top: 100px;
   // }
 }
+
+main#landing {
+  margin: 0;
+  padding: 0;
+  background-color: $brand-colour;
+  color: $white;
+  height: calc(100vh - 105px);
+
+  div.content {
+    p {
+      margin: 0;
+    }
+
+    padding: 16px 32px;
+  }
+
+  
+}
