--- a/app/project/tennis/static/tennis/styles/_learn.scss
+++ b/app/project/tennis/static/tennis/styles/_learn.scss
@@ -117,3 +117,12 @@ main#learn {
   }
   
 }
+
+@media only screen and (max-width: 480px) {
+  main#learn {
+    .resources {
+      justify-content: center;
+
+    }
+  }
+}
