--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -373,7 +373,7 @@ main#profile .modal .modal-content form label {
   width: 100%;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 480px) {
   main#profile div.profile-top {
     padding: 12px 16px;
   }
@@ -389,9 +389,9 @@ main#profile .modal .modal-content form label {
   }
   main#profile .achievements .award {
     flex-direction: column;
-  }
-  main#profile .achievements .award .award-img {
-    width: 100%;
+    width: -moz-max-content;
+    width: max-content;
+    min-width: 350px;
   }
 }
 main#feed .modal {
