--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -209,8 +209,8 @@
     right: 0;
     width: 300px;
     height: 100%;
-    // background-color: #f4f4f4;
-    background-color: #dddde0;
+    background-color: $brand-colour;
+    color: $white;
     overflow-y: auto;
     padding: 20px;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
@@ -219,15 +219,23 @@
     gap: 24px;
     align-items: center;
 
+    button {
+      &:hover {
+        background-color: $green;
+        color: $white;
+      }
+    }
+
     .side-panel-close-btn {
       align-self: flex-end;
 
       background-color: #00000000;
-      color: #000000;
+      color: #FFFFFF;
       font-size: 3rem;
     }
 
     .side-panel-session-div {
+      color: #000000;
       background-color: #FFFFFF;
       width: 90%;
 
