--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -167,7 +167,8 @@
   right: 0;
   width: 300px;
   height: 100%;
-  background-color: #dddde0;
+  background-color: #578DDD;
+  color: #FFFFFF;
   overflow-y: auto;
   padding: 20px;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
@@ -175,13 +176,18 @@
   gap: 24px;
   align-items: center;
 }
+.calendar-section .side-panel button:hover {
+  background-color: #32ca6f;
+  color: #FFFFFF;
+}
 .calendar-section .side-panel .side-panel-close-btn {
   align-self: flex-end;
   background-color: rgba(0, 0, 0, 0);
-  color: #000000;
+  color: #FFFFFF;
   font-size: 3rem;
 }
 .calendar-section .side-panel .side-panel-session-div {
+  color: #000000;
   background-color: #FFFFFF;
   width: 90%;
   border: 1px solid rgba(0, 0, 0, 0.031372549);
