--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -334,7 +334,7 @@
         align-items: flex-start;
       }
 
-      input, textarea {
+      input, textarea, select {
         width: 100%;
         height: 2rem;
         font-size: 0.9rem;
