--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -262,7 +262,7 @@
   gap: 8px;
   align-items: flex-start;
 }
-.modal .modal-content form input, .modal .modal-content form textarea {
+.modal .modal-content form input, .modal .modal-content form textarea, .modal .modal-content form select {
   width: 100%;
   height: 2rem;
   font-size: 0.9rem;
