--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -310,6 +310,8 @@
   justify-content: center;
   align-items: center;
 
+  padding-top: 24px;
+
   .modal-content {
     background-color: #fefefe;
     padding: 20px;
