--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -240,6 +240,7 @@
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: center;
   align-items: center;
+  padding-top: 24px;
 }
 .modal .modal-content {
   background-color: #fefefe;
