--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -227,6 +227,9 @@ main#profile {
     justify-content: center;
     align-items: center;
 
+    padding: 24px 0;
+    overflow-y: scroll;
+
     // To put on top of the buttons.
     z-index: 2;
 
