--- a/app/project/community/static/community/styles/_settings.scss
+++ b/app/project/community/static/community/styles/_settings.scss
@@ -69,6 +69,9 @@ main#settings {
     justify-content: center;
     align-items: center;
 
+    padding: 24px 0;
+    overflow-y: scroll;
+
     // To put on top of the buttons.
     z-index: 2;
 
