--- a/app/project/tennis/templates/tennis/tennis.html
+++ b/app/project/tennis/templates/tennis/tennis.html
@@ -1,44 +1,10 @@
 {% extends '../registration/base.html' %} 
+{% load static %}
 {% block extra_styles %}
-<style>
-  main {
-      padding: 16px 32px; 
-  }
-
-  h3 {
-    margin-top: 48px;
-  }
-
-  .session {
-        /* border: 1px solid #00000000; */
-        box-shadow: 4px 4px 20px #00000030;
-        border-radius: 8px;
-        margin-bottom: 16px;
-        padding: 8px 16px;
-  }
-
-  .session:hover {
-        box-shadow: 4px 4px 20px #00000050;
-  }
-
-  .session span {
-        font-weight: bold;
-  }
-
-  .session p, .session a {
-        padding: 0 20px;
-  }
-
-  main a {
-    text-decoration: none;
-  }
-</style>
+<link rel="stylesheet" href="{% static './tennis/styles/styles.css' %}">
 {% endblock %}
 {% block content %}
-<main>
-  <h2>Tennis</h2>
-  <p>This is the tennis page for SixLove, you can view your tennis sessions here!</p>
-
+<main id="tennis">
   <h3>Today</h3>
 
   {% if today_sessions %}
