--- a/app/project/tennis/templates/tennis/add_tennis_session.html
+++ b/app/project/tennis/templates/tennis/add_tennis_session.html
@@ -1,19 +1,11 @@
 {% extends '../registration/base.html' %} 
+{% load static %}
 {% block extra_styles %}
-<style>
-  main {
-    padding: 16px 32px;
-  }
-
-  .view-tennis-sessions-btn {
-    margin-top: 20px;
-  }
-</style>
+<link rel="stylesheet" href="{% static './tennis/styles/styles.css' %}">
 {% endblock %}
 {% block content %}
-<main>
+<main id="session">
   <h2>Add Tennis Session</h2>
-  <p>This is the Add tennis session page for SixLove, feel free to add tennis sessions!</p>
 
   <form action="" method="post" novalidate>
     {% csrf_token %} 
