--- a/app/project/tennis/static/tennis/styles/_session.scss
+++ b/app/project/tennis/static/tennis/styles/_session.scss
@@ -48,3 +48,32 @@ main#session {
     margin-top: 20px;
   }
 }
+
+main#delete {
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 170px);
+  align-items: center;
+  justify-content: space-between;
+
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+
+    background-color: $brand-colour;
+    color: $white;
+    padding: 16px 32px;
+    border-radius: 8px;
+
+    p {
+      font-size: 1.7rem;
+    }
+  }
+
+  .back-btn-div {
+    align-self: flex-start;
+    margin-top: 20px;
+  }
+}
