--- a/app/project/tennis/templates/tennis/delete_tennis_session.html
+++ b/app/project/tennis/templates/tennis/delete_tennis_session.html
@@ -1,27 +1,23 @@
 {% extends '../registration/base.html' %} 
+{% load static %}
 {% block extra_styles %}
-<style>
-  main {
-    padding: 16px 32px;
-  }
-
-  .view-tennis-sessions-btn {
-    margin-top: 20px;
-  }
-</style>
+<link rel="stylesheet" href="{% static './tennis/styles/styles.css' %}">
 {% endblock %}
 {% block content %}
-<main>
+<main id="delete">
   <h2>Delete Tennis Session?</h2>
-  <p>Are you sure you want to delete the session "{{ tennis_session.title }}"?</p>
+  <div class="main-content">
+    <p>Are you sure you want to delete the session "{{ tennis_session.title }}"?</p>
+    <form action="" method="post">
+      {% csrf_token %}
+      <button class="btn" type="submit">Delete Tennis Session</button>
+    </form>
+  </div>
 
-  <form action="" method="post">
-    {% csrf_token %}
-    <button class="btn" type="submit">Delete Tennis Session</button>
-  </form>
-
-  <a href="{% url 'tennis:tennis' %}"
-    ><button class="view-tennis-sessions-btn">Back to Tennis Sessions</button></a
-  >
+  <div class="back-btn-div">
+    <a href="{% url 'tennis:tennis' %}"
+      ><button class="view-tennis-sessions-btn">Back to Tennis Sessions</button></a
+    >
+  </div>
 </main>
 {% endblock %}
