--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -1,4 +1,5 @@
 {% extends './base.html' %} 
+{% load static %}
 {% block content %}
 {% if user.is_authenticated %}
 <main id="home">
@@ -261,7 +262,8 @@
 <main id="landing">
   <div class="content">
     <p>Got what it takes to become a competitive tennis player?</p>
-    <p>Sign up and find out.</p>
+    <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
+    <p>Sign up and find out...</p>
   </div>
 </main>
 {% endif %}
