--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -70,10 +70,24 @@ main#landing {
 
   div.content {
     p {
+      font-size: 1.5rem;
+      padding: 16px 0;
       margin: 0;
     }
 
-    padding: 16px 32px;
+    height: calc(100vh - 150px);
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    img {
+      min-width: 200px;
+      width: 40vw;
+      max-width: 300px;
+    }
   }
 
   
