--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -261,7 +261,7 @@
 {% else %}
 <main id="landing">
   <div class="content">
-    <p>Got what it takes to become a competitive tennis player?</p>
+    <p class="larger">Got what it takes to become a competitive tennis player?</p>
     <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
     <p>Sign up and find out...</p>
   </div>
