--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -69,6 +69,7 @@ main#landing {
   height: calc(100vh - 105px);
 
   div.content {
+    margin: 0 16px;
     p {
       font-size: 1.5rem;
       font-weight: 500;
@@ -90,7 +91,7 @@ main#landing {
     align-items: center;
 
     img {
-      min-width: 200px;
+      min-width: 300px;
       width: 40vw;
       max-width: 300px;
     }
