--- a/app/project/tennis/templates/tennis/tennis.html
+++ b/app/project/tennis/templates/tennis/tennis.html
@@ -30,6 +30,9 @@
     <a href="{% url 'planner:calendar' %}">
       <button class="tennis-btn" style="margin-top: 20px;">View Calendar</button>
     </a>
+    <a href="{% url 'home' %}">
+      <button class="tennis-btn" style="margin-top: 20px;">View Stats</button>
+    </a>
   </div>
 
   <h3>Upcoming sessions</h3>
