--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -66,7 +66,8 @@ main#landing {
   padding: 0;
   background-color: $brand-colour;
   color: $white;
-  height: calc(100vh - 105px);
+  // height: calc(100vh - 105px);
+  // overflow-y: scroll;
 
   div.content {
     margin: 0 16px;
@@ -82,7 +83,7 @@ main#landing {
       font-weight: bold;
     }
 
-    height: calc(100vh - 150px);
+    // height: calc(100vh - 150px);
     box-sizing: border-box;
 
     display: flex;
