--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -33,8 +33,8 @@
         {% endif %}
       </div>
     </header>
+    {% if user.is_authenticated %}
     <nav>
-      {% if user.is_authenticated %}
         <a href="{% url 'tennis:tennis' %}">
           <img src="{% static './registration/images/tennis-page-icon.svg' %}" alt="Tennis Page">
         </a>
@@ -57,8 +57,9 @@
             <img src="{% static './registration/images/profile-page-icon.svg' %}" alt="Profile Page">
           {% endif %}
         </a>
-      {% endif %}
     </nav>
-    {% block content %}{% endblock %}
+    {% endif %}
+    {% block content %}
+    {% endblock %}
   </body>
 </html>
