--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -262,7 +262,28 @@
 <main id="landing">
   <div class="content">
     <p class="larger">Got what it takes to become a competitive tennis player?</p>
-    <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
+
+    <section class="content-slider">
+      <p class="left arrow">&larr;</p>
+      <div class="display-content current">
+        <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
+      </div>
+      <p class="right arrow">&rarr;</p>
+    </section>
+
+    <section class="nav-dots">
+      <div class="nav-dot filled"></div>
+      <div class="nav-dot"></div>
+      <div class="nav-dot"></div>
+      <div class="nav-dot"></div>
+      <div class="nav-dot"></div>
+    </section>
+
+    <div class="stop-btn">
+      <button class="start-slides btn">Start Slides</button>
+      <button class="stop-slides btn">Stop Slides</button>
+    </div>
+
     <p>Sign up and find out...</p>
   </div>
 </main>
