--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -1,7 +1,7 @@
 {% extends './base.html' %} 
 {% load static %}
 {% block scripts %}
-<script src="{% static './registration/scripts/carousel.js %}"></script>
+<script src="{% static './registration/scripts/carousel.js' %}"></script>
 {% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
@@ -264,15 +264,19 @@
 {% else %}
 <main id="landing">
   <div class="content">
-    <p class="larger">Got what it takes to become a competitive tennis player?</p>
+    <!-- <p class="larger">Got what it takes to become a competitive tennis player?</p> -->
 
     <section class="content-carousel">
       <p class="left arrow">&larr;</p>
       <div class="display-content current">
         <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
+        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque, doloribus modi voluptates, eligendi alias nisi veritatis sunt ad magnam velit aliquid consequatur laboriosam accusantium. Voluptate doloremque impedit alias, tempora incidunt similique in nostrum, vel molestiae atque corrupti quas voluptas repellat nihil vero iusto ad nesciunt qui quidem voluptatibus iure.
+        </p>
       </div>
       <div class="display-content current">
         <img src="{% static './registration/images/app-pic.svg' %}" alt="Photo of the app.">
+        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque, doloribus modi voluptates, eligendi alias nisi veritatis sunt ad magnam velit aliquid consequatur laboriosam accusantium. Voluptate doloremque impedit alias, tempora incidunt similique in nostrum, vel molestiae atque corrupti quas voluptas repellat nihil vero iusto ad nesciunt qui quidem voluptatibus iure.
+        </p>
       </div>
       <p class="right arrow">&rarr;</p>
     </section>
@@ -290,7 +294,7 @@
       <button class="stop-slides btn">Stop Slides</button>
     </div>
 
-    <p>Sign up and find out...</p>
+    <!-- <p>Sign up and find out...</p> -->
   </div>
 </main>
 {% endif %}
