--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -96,6 +96,25 @@ main#landing {
       justify-content: center;
       align-items: center;
 
+      .arrow {
+        font-size: 3rem;
+        background-color: #3e9c94;
+        color: #fff;
+
+        border: 4px solid #000;
+        box-shadow: 8px 4px 0 #7ec0de;
+
+        padding: 8px 16px;
+        // width: fit-content;
+        border-radius: 50%;
+
+        &:hover {
+          background-color: #54d39a;
+          cursor: pointer;
+      }
+      
+      }
+
       .display-content {
         display: none;
 
@@ -103,10 +122,13 @@ main#landing {
           min-width: 300px;
           width: 40vw;
           max-width: 300px;
+
+          object-fit: cover;
         }
 
         .info {
           font-size: 1.2rem;
+          width: 75%;
         }
       }
 
