--- a/app/project/registration/static/registration/styles/_index.scss
+++ b/app/project/registration/static/registration/styles/_index.scss
@@ -140,6 +140,33 @@ main#landing {
     }
     }
 
+    .nav-dots {
+      // margin-top: -15vh;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      gap: 8px;
+
+      .nav-dot {
+        background-color: #ddd;
+        color: #555;
+
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+
+        border: 1px solid $brand-colour;
+      }
+
+      .filled {
+        background-color: #74edb4;
+        transform: scale(1.4);
+    }
+    }
+
     .stop-btn {
       button {
         margin-bottom: 0;
