--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -284,9 +284,9 @@
     <section class="nav-dots">
       <div class="nav-dot filled"></div>
       <div class="nav-dot"></div>
-      <div class="nav-dot"></div>
-      <div class="nav-dot"></div>
-      <div class="nav-dot"></div>
+      <!-- <div class="nav-dot"></div> -->
+      <!-- <div class="nav-dot"></div> -->
+      <!-- <div class="nav-dot"></div> -->
     </section>
 
     <div class="stop-btn">
